// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event Card Snapshot 1`] = `
<div>
  <div
    class="card h-100"
  >
    <div
      class="card-body p-4 eventCardBody"
    >
      <h5
        class="card-title fw-bolder fs-4 mb-4"
      >
        Event Title
      </h5>
      <h6
        class="card-subtitle mb-2 text-muted"
      >
        <div
          class="d-flex"
        >
          <span>
            Mock Timespan from 
            2021-06-27T23:38:43.000Z
             to 
            2021-06-27T23:38:43.000Z
          </span>
          <div
            class="text-end pt-2"
          >
            <span>
              5
            </span>
            <img
              alt="attendees"
              class="ms-1"
              src="/assets/icons/members.svg"
            />
          </div>
        </div>
      </h6>
      <p
        class="card-text"
      >
        Event Description
      </p>
    </div>
    <div
      class="card-footer"
      hidden=""
    >
      <a
        href="/you/event/123456789"
      >
        <button
          aria-label="Edit Event"
          class="btn btn-primary me-3"
        >
          Edit
        </button>
      </a>
      <button
        aria-label="Delete Event"
        class="btn btn-outline-secondary btn-icon"
      >
        <img
          src="/assets/icons/trash.svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Events Overview Page Loading 1`] = `
<div>
  <div>
    Mocked Header Component
  </div>
  <div>
    Mocked Title Component: 
  </div>
  <div
    class="container mb-5"
  >
    <div
      class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3"
    >
      <div
        class="col"
      >
        <div
          class="d-flex justify-content-center"
        >
          <div
            class="spinner-border"
            role="status"
          >
            <span
              class="visually-hidden"
            >
              Loading...
            </span>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <span>
          Mocked NewEvent
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Events Overview Page Normal 1`] = `
<div>
  <div>
    Mocked Header Component
  </div>
  <div>
    Mocked Title Component: 
  </div>
  <div
    class="container mb-5"
  >
    <div
      class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3"
    >
      <div
        class="col"
        hidden=""
      >
        <div
          class="d-flex justify-content-center"
        >
          <div
            class="spinner-border"
            role="status"
          >
            <span
              class="visually-hidden"
            >
              Loading...
            </span>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <span>
          Mocked Event
        </span>
      </div>
      <div
        class="col"
      >
        <span>
          Mocked NewEvent
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`NewEvent Card Snapshot 1`] = `
<div>
  <div
    aria-label="Create New Event"
    class="card-outline h-100"
  >
    <div
      class="card-body p-4 h-100 d-flex justify-content-center align-items-center flex-direction-column"
    >
      <div
        class="text-center"
      >
        <span
          class="iconBox"
          style="background-image: url(/assets/icons/add.svg);"
        />
        <p
          class="mt-3 text-primary fw-bold"
        >
          CREATE NEW EVENT
        </p>
      </div>
    </div>
  </div>
</div>
`;
